--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -5,7 +5,7 @@
   </span>
   <% if current_user?(micropost.user) %>
     <%= link_to "delete", micropost, method: :delete,
-                                     data: { confirm: "You sure?" },
+                                     confirm: "You sure?",
                                      title: micropost.content %>
   <% end %>
 </li>
